--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,12 @@ language: c
 
 # Based from: https://github.com/greghendershott/travis-racket
 
-# Optional: Remove to use Travis CI's older infrastructure.
-sudo: true
-dist: trusty
-
+matrix:
+ include:
+   - os: linux
+     sudo: true
+     dist: trusty
+   - os: osx
 
 env:
   global:
@@ -34,22 +36,6 @@ matrix:
 
 before_install:
   # libmlt6
-  - sudo add-apt-repository -y ppa:jonathonf/ffmpeg-3
-  - sudo add-apt-repository -y ppa:jonathonf/tesseract
-  - sudo apt-get -qq update
-  - sudo apt-get install -y ffmpeg
-  - sudo apt-get install -y libav-tools
-  - sudo apt-get install -y libavcodec-dev
-  - sudo apt-get install -y libavcodec-extra
-  - sudo apt-get install -y libavformat-dev
-  - sudo apt-get install -y libavutil-dev
-  - sudo apt-get install -y libswscale-dev
-  - sudo apt-get install -y ladspa-sdk
-  - sudo apt-get install -y libgdk-pixbuf2.0-*
-  - sudo apt-get install -y frei0r-plugins*
-  - sudo apt-get install libdc1394-*
-  # Turn off the irrelevant libdc1394 warning
-  - sudo ln /dev/null /dev/raw1394
   # racket
   - git clone https://github.com/greghendershott/travis-racket.git ~/travis-racket
   - cat ~/travis-racket/install-racket.sh | bash # pipe to bash not sh!
